--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -95,7 +95,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="https://github.com/maheechy77"
                 >GitHub </a>
             </li>
             <li class="nav-item">
