--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  {% load staticfiles %}
   <head>
     <meta charset="utf-8" />
     <meta
@@ -80,7 +81,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Muhtady Mahi</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Muhtady Mahi</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -94,15 +95,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="https://github.com/maheechy77"
                 >GitHub </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="{% static 'cv.pdf' %}">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="{% url 'blogpage' %}">Blog</a>
             </li>
           </ul>
         </div>
@@ -116,6 +117,7 @@
           <p class="lead text-muted">
             Hey, I'm Muhtayd Chowdhury Mahi And I love Coding!
           </p>
+          <img src="{% static 'ID 15285.jpg' %}"  height="150"/>
           <p>
             <a href="mailto:maheechy96@gmail.com" class="btn btn-primary my-2">Email Me!</a>
           </p>
